<resources>
    <string name="app_name">Register_Login</string>
    <string name="register_text">Register</string>
    <string name="back_to_login">Back to login page</string>
    <string name="fullname_hint">Full name</string>
    <string name="email_hint">e-mail</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="go_to_register">Go to register</string>
    <string name="create_player">Create player</string>
    <string name="playername_hint">Player name</string>
    <string name="class_hint">Player class</string>
    <string name="gender_hint">Player gender</string>
    <string name="stat_null">0</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="stpleft">Stat point left:</string>
    <string name="main_menu">Main menu</string>
    <string name="show_players">Show players</string>
    <string name="go_to_main_menu">Go to main menu</string>
    <string name="class_text">Class:</string>
    <string name="gender_text">Gender:</string>
    <string name="health_text">Health:</string>
    <string name="damage_text">Damage:</string>
    <string name="defense_text">Defense:</string>
    <string name="placeholder_text">placeholder</string>
    <string name="Update_btn">Update</string>
    <string name="Delete_btn">Delete</string>
</resources>